# rustcast

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  flake.nix  install.sh
assets/: style.css
assets/cheatsheets/: curl.md  git.md  netcat.md  tmux.md  vim.md
crates/rustcast-core/: Cargo.toml
crates/rustcast-core/assets/cheatsheets/: ffuf-gobuster.md  gdb.md  hashcat-john.md  linux-privesc.md  nmap.md  sqlmap.md  ssh.md  tcpdump.md
crates/rustcast-core/src/: action.rs  aliases.rs  apps.rs  calc.rs  cheatsheets.rs  clip.rs  commands.rs  config.rs  eval.rs  frecency.rs  gen.rs  lib.rs  manage.rs  model.rs  pins.rs  procs.rs  provider.rs  quicklinks.rs  ranking.rs  registry.rs  scripts.rs  settings.rs  snippets.rs  system.rs  tldr.rs  windows.rs
crates/rustcast-core/src/clipboard/: mod.rs  store.rs
crates/rustcast-core/src/cyber/: codec.rs  hash.rs  jwt.rs  mod.rs  net.rs  payload.rs
crates/rustcast-core/src/files/: mod.rs
crates/rustcast-gui/: Cargo.toml  README.md
crates/rustcast-gui/assets/: style.css
crates/rustcast-gui/src/: main.rs
packaging/: rustcast-clipboard.service  rustcast.desktop  rustcast.service
packaging/aur/: .SRCINFO  .gitignore  PKGBUILD
packaging/aur/rustcast/: FETCH_HEAD  config  packed-refs
packaging/aur/rustcast/objects/pack/: pack-d0b61b67ff8f39ac5c88a0d929bca5d4f496d456.idx  pack-d0b61b67ff8f39ac5c88a0d929bca5d4f496d456.pack  pack-d0b61b67ff8f39ac5c88a0d929bca5d4f496d456.rev
packaging/aur/rustcast/refs/heads/: main
plugins/example-echo/: echo.sh  manifest.toml
