[package]
name = "rustcast-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "rustcast core — pure logic (no GTK): providers, ranking, config, cyber toolkit"

[dependencies]
fuzzy-matcher.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true
anyhow.workspace = true
base64.workspace = true
hex.workspace = true
urlencoding.workspace = true
sha2.workspace = true
sha1.workspace = true
md-5.workspace = true
serde_json.workspace = true
chrono.workspace = true
ipnet.workspace = true
rusqlite.workspace = true
ignore.workspace = true
